modify model and adde crud residence
